--- a/README
+++ b/README
@@ -1,2 +1,4 @@
-本系统是一个任务的执行框架, 按照自己对python项目的理解组合工程,  整合了配置, 日志, 以及日志的收集等功能.
+本系统是一个任务的执行框架, 按照自己对python项目的理解组合工程,
+整合了配置, 日志, 以及日志的收集等功能.
 可以专注开发核心功能, 而不用再关注其余的系统部分.
+只是刚刚开始, 需要的依赖最后会有一个requirements.txt文件
